Fixed table alignments not being applied #86

--- a/assets/mikio.less
+++ b/assets/mikio.less
@@ -1462,6 +1462,14 @@ body {
         text-align: left;
         border-left: 1px solid var(--table-col-border-color);
         border-right: 1px solid var(--table-col-border-color);
+
+        &.centeralign {
+            text-align: center;
+        }
+
+        &.rightalign {
+            text-align: right;
+        }
     }
 
     thead tr {
